--- a/index.html
+++ b/index.html
@@ -3,216 +3,174 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ถึงที่รักของเขา 🤍</title>
+<title>ที่รักของเขา 💖</title>
 
 <style>
-*{box-sizing:border-box}
 body{
   margin:0;
   height:100vh;
-  background:radial-gradient(circle at top,#ffeaf3,#ffd6e8);
+  background:linear-gradient(135deg,#ffe4ec,#ffd6f3);
   display:flex;
   justify-content:center;
   align-items:center;
   font-family:'Segoe UI',sans-serif;
   overflow:hidden;
-  transition:background 2s;
 }
+
 .card{
   background:white;
-  width:95%;
-  max-width:420px;
-  padding:28px;
-  border-radius:36px;
+  width:90%;
+  max-width:360px;
+  border-radius:28px;
+  padding:24px;
   text-align:center;
-  box-shadow:0 40px 80px rgba(255,120,170,.35);
-  animation:fadeIn 1.2s ease;
+  box-shadow:0 20px 60px rgba(255,105,180,.35);
+  animation:fadeIn .8s ease;
 }
-@keyframes fadeIn{from{opacity:0;transform:scale(.9)}}
 
 img{
-  width:88%;
-  border-radius:30px;
-  margin-bottom:18px;
-  box-shadow:0 20px 40px rgba(255,120,170,.35);
+  width:75%;
+  border-radius:22px;
+  margin-bottom:16px;
 }
-.text{
-  font-size:1.22rem;
-  line-height:1.85;
-  color:#ff4f86;
-  min-height:170px;
-  animation:textPop .6s ease;
-}
-@keyframes textPop{from{opacity:0;transform:translateY(8px)}}
 
-.wait{opacity:.55;font-size:.95rem}
+.text{
+  font-size:1.25rem;
+  line-height:1.8;
+  color:#ff5f9e;
+  min-height:120px;
+  transition:.4s;
+}
 
 button{
   margin-top:18px;
-  padding:14px 34px;
-  border-radius:30px;
+  padding:14px 28px;
   border:none;
-  background:linear-gradient(135deg,#ff7aa2,#ff4f86);
+  border-radius:30px;
+  background:#ff6fae;
   color:white;
-  font-size:1rem;
-  box-shadow:0 10px 30px rgba(255,90,140,.45);
+  font-size:1.05rem;
+  box-shadow:0 0 25px rgba(255,105,180,.6);
+}
+
+button:disabled{
+  opacity:.5;
 }
 
 input{
   width:90%;
-  padding:12px;
-  margin-top:12px;
-  border-radius:18px;
-  border:2px solid #ffd1e3;
+  padding:10px;
+  margin-top:10px;
+  border-radius:14px;
+  border:1px solid #ff9fc7;
   font-size:1rem;
 }
 
 .heart{
   position:fixed;
-  bottom:-40px;
+  bottom:-20px;
   font-size:22px;
-  animation:floatUp 4.5s linear forwards;
-}
-@keyframes floatUp{
-  to{transform:translateY(-120vh) scale(2);opacity:0}
+  animation:floatUp 6s linear forwards;
 }
 
-.spark{
-  position:fixed;
-  width:10px;
-  height:10px;
-  background:#ff9fc2;
-  border-radius:50%;
-  animation:spark 1.2s ease-out forwards;
+@keyframes floatUp{
+  to{
+    transform:translateY(-120vh);
+    opacity:0;
+  }
 }
-@keyframes spark{
-  to{transform:scale(6);opacity:0}
+
+@keyframes fadeIn{
+  from{opacity:0;transform:scale(.95)}
+  to{opacity:1}
 }
 </style>
 </head>
 
 <body>
 
+<div class="card">
+  <img src="รักมิ้น.png" alt="ที่รักของเขา">
+
+  <div class="text" id="text">
+    เขาไม่เคยคิดเลยว่าแค่รอยยิ้มของใครคนหนึ่ง จะเปลี่ยนโลกได้ขนาดนี้
+  </div>
+
+  <button id="btn">กดเบา ๆ 💗</button>
+
+  <div id="questions" style="display:none">
+    <input id="q1" placeholder="คำถามที่ 1 : มิ้นรู้สึกยังไงกับเขา 🥺">
+    <input id="q2" placeholder="คำถามที่ 2 : สิ่งที่มิ้นชอบในตัวเขา 💕">
+    <input id="q3" placeholder="คำถามที่ 3 : อยากบอกอะไรเขาไหม 🤍">
+    <button onclick="sendLine()">ส่งให้เขาใน LINE 💌</button>
+  </div>
+</div>
+
 <audio id="bgm" loop>
   <source src="รักมากนะ (1).mp3" type="audio/mpeg">
 </audio>
 
-<div class="card">
-  <img src="รักมิ้น.png" alt="ที่รักของเขา">
-  <div class="text" id="text">
-    กดครั้งแรกนะ… เขาอยากพามิ้นค่อย ๆ อ่านไปพร้อมเพลงนี้ 🤍
-  </div>
-  <div id="extra"></div>
-  <button onclick="next()">กดเบา ๆ 💗</button>
-</div>
-
 <script>
 const texts = [
-"เขาไม่เคยคิดเลยว่าแค่รอยยิ้มของใครคนหนึ่ง จะเปลี่ยนโลกได้ขนาดนี้",
-"ตั้งแต่มีมิ้นอยู่ในชีวิต ทุกวันของเขามีเหตุผลให้ตื่นขึ้นมา",
-"บางวันไม่ได้พิเศษ แต่แค่มีมิ้น… มันก็พิเศษแล้ว",
-"เขาชอบเวลาที่มิ้นเรียกเขาว่าตะเอง มันทำให้ใจเขานุ่มทุกครั้ง",
-"หมาเด็กตัวนี้อาจกวน อาจซน แต่รักจริงไม่แบ่งให้ใคร",
-"สองเดือนที่ผ่านมา ไม่ใช่แค่เวลาที่เดินไป",
-"แต่มันคือความรู้สึกที่ค่อย ๆ โตขึ้นทุกวัน",
-"เขาเริ่มห่วง เริ่มคิดถึง โดยไม่ต้องมีเหตุผล",
-"บางทีแค่เห็นชื่อมิ้นบนจอ เขาก็ยิ้มแล้ว",
-"เขาไม่ได้เก่งเรื่องคำหวาน",
-"แต่ทุกอย่างที่ทำ… มาจากใจจริง",
-"เขาอยากเป็นที่สบายใจในวันที่มิ้นเหนื่อย",
-"อยากเป็นเสียงหัวเราะในวันที่มิ้นเครียด",
-"อยากเป็นคนแรกที่มิ้นคิดถึงตอนตื่น",
-"และเป็นคนสุดท้ายที่มิ้นนึกถึงก่อนนอน",
-"เขาไม่รู้อนาคตจะเป็นยังไง",
-"แต่เขารู้ว่าตอนนี้… เขาเลือกมิ้น",
-"เลือกที่จะดูแล เลือกที่จะรัก",
-"เลือกที่จะไม่ไปไหน",
-"ถ้าวันไหนเขางอแง ขอให้รู้ว่ามันเพราะรักมาก",
-"ถ้าวันไหนเขากวน ขอให้รู้ว่ามันเพราะสบายใจ",
-"มิ้นคือพื้นที่ปลอดภัยของเขา",
-"คือคำว่าบ้านในความหมายที่อบอุ่น",
-"เขาดีใจที่ได้คบกับมิ้น",
-"ดีใจที่ได้รัก",
-"และดีใจที่ได้ใช้คำว่าเรา",
+"ตั้งแต่มีมิ้นอยู่ในชีวิต ทุกวันของเขามีความหมาย",
+"เขาเริ่มยิ้มบ่อยขึ้น โดยไม่รู้ตัว",
+"บางวันแค่เห็นชื่อมิ้นขึ้นแจ้งเตือน ใจก็ฟูแล้ว",
+"เขาไม่เก่งเรื่องคำหวาน แต่เก่งเรื่องรักมิ้น",
+"หมาเด็กตัวนี้อาจงอแง แต่รักจริงไม่แบ่ง",
+"สองเดือนที่ผ่านมา มันไม่ใช่แค่เวลา",
+"แต่มันคือความผูกพันที่ค่อย ๆ โตขึ้น",
+"เขาชอบเวลาที่มิ้นหัวเราะ",
+"ชอบแม้กระทั่งเวลาที่มิ้นงอน",
+"เพราะมันทำให้เขารู้สึกว่า… เขาสำคัญ",
+"เขาอยากเป็นที่พักใจในวันที่มิ้นเหนื่อย",
+"อยากเป็นเสียงแรกที่มิ้นคิดถึง",
+"อยากอยู่ข้าง ๆ แม้วันที่โลกไม่น่ารัก",
+"เขาไม่ได้สัญญาว่าจะสมบูรณ์แบบ",
+"แต่สัญญาว่าจะไม่หายไปไหน",
+"เขารักมิ้น ในแบบที่เป็น",
+"รักในวันที่มิ้นยิ้ม",
+"รักในวันที่มิ้นร้องไห้",
+"รักแม้ในวันที่มิ้นไม่มั่นใจ",
+"เพราะสำหรับเขา… มิ้นคือที่รัก",
 "สุขสันต์ครบรอบ 2 เดือนนะ",
-"ที่รักของเขา 🤍",
-"ก่อนจบเพลงนี้… เขาอยากฟังเสียงจากมิ้นบ้าง"
+"ขอบคุณที่เลือกจับมือเขา",
+"ก่อนจบเพลงนี้ เขาอยากฟังเสียงมิ้นบ้าง"
 ];
 
-// เติมจนใกล้จบเพลง (ประมาณ 90 คลิก)
-while(texts.length < 90){
-  texts.splice(texts.length-1,0,
-    "เขารู้ตัวอีกที… หัวใจก็ผูกกับมิ้นไปแล้ว 💞"
-  );
-}
+let i = 0;
+const textEl = document.getElementById("text");
+const btn = document.getElementById("btn");
+const bgm = document.getElementById("bgm");
 
-let i=0, started=false;
-
-function next(){
-  if(!started){
-    document.getElementById("bgm").play();
-    started=true;
-  }
-
+btn.onclick = () => {
+  if(i === 0) bgm.play();
   if(i < texts.length){
-    document.getElementById("text").innerHTML =
-      "<span class='wait'>รอ 3 วินาทีนะ… 💗</span>";
-    setTimeout(()=>{
-      document.getElementById("text").innerHTML = texts[i];
-      effects();
-      i++;
-      document.body.style.background =
-        `radial-gradient(circle at top,
-        hsl(${Math.random()*360},85%,95%),
-        hsl(${Math.random()*360},80%,88%))`;
-    },3000);
+    textEl.textContent = texts[i++];
+    spawnHeart();
+    btn.disabled = true;
+    setTimeout(()=>btn.disabled=false,3000);
   } else {
-    showQuestions();
+    btn.style.display="none";
+    document.getElementById("questions").style.display="block";
   }
-}
+};
 
-function effects(){
-  for(let h=0;h<12;h++){
-    const e=document.createElement("div");
-    e.className="heart";
-    e.innerHTML="💖";
-    e.style.left=Math.random()*100+"vw";
-    document.body.appendChild(e);
-    setTimeout(()=>e.remove(),4500);
-  }
-  for(let s=0;s<6;s++){
-    const sp=document.createElement("div");
-    sp.className="spark";
-    sp.style.left=Math.random()*100+"vw";
-    sp.style.top=Math.random()*100+"vh";
-    document.body.appendChild(sp);
-    setTimeout(()=>sp.remove(),1200);
-  }
-}
-
-function showQuestions(){
-  document.getElementById("text").innerHTML =
-    "ตอบเขาหน่อยนะ… คำตอบของมิ้นสำคัญกับเขามาก 🤍";
-  document.getElementById("extra").innerHTML = `
-    <input id="q1" placeholder="รู้สึกยังไงกับเขา">
-    <input id="q2" placeholder="ช่วงไหนที่รู้สึกรักเขาที่สุด">
-    <input id="q3" placeholder="อยากบอกอะไรเขาในวันครบรอบ">
-    <button onclick="sendLine()">ส่งให้เขาใน LINE 💚</button>
-  `;
+function spawnHeart(){
+  const h=document.createElement("div");
+  h.className="heart";
+  h.textContent="💗";
+  h.style.left=Math.random()*100+"vw";
+  document.body.appendChild(h);
+  setTimeout(()=>h.remove(),6000);
 }
 
 function sendLine(){
   const msg =
-`จากหัวใจของมิ้น 🤍
-
-1️⃣ ${q1.value}
-2️⃣ ${q2.value}
-3️⃣ ${q3.value}
-
-ถึงหมาเด็กของมิ้น 🐶`;
-
-  window.location.href =
-    "https://line.me/R/msg/text/?" + encodeURIComponent(msg);
+`คำตอบจากมิ้น 💖
+1) ${q1.value}
+2) ${q2.value}
+3) ${q3.value}`;
+  location.href="https://line.me/R/msg/text/?"+encodeURIComponent(msg);
 }
 </script>
 
