--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ที่รักของเขา 💖</title>
+<title>ถึงที่รักของเขา 💖</title>
 
 <style>
 body{
   margin:0;
   height:100vh;
-  background:linear-gradient(135deg,#ffe4ec,#ffd6f3);
+  background:linear-gradient(180deg,#ffe6f2,#ffd1ea);
   display:flex;
   justify-content:center;
   align-items:center;
@@ -18,71 +18,66 @@ body{
 }
 
 .card{
-  background:white;
-  width:90%;
-  max-width:360px;
+  background:#fff;
+  width:92%;
+  max-width:380px;
   border-radius:28px;
-  padding:24px;
+  padding:20px;
   text-align:center;
-  box-shadow:0 20px 60px rgba(255,105,180,.35);
+  box-shadow:0 20px 40px rgba(255,105,180,.35);
   animation:fadeIn .8s ease;
 }
 
 img{
-  width:75%;
-  border-radius:22px;
-  margin-bottom:16px;
+  width:100%;
+  border-radius:20px;
+  margin-bottom:14px;
 }
 
 .text{
-  font-size:1.25rem;
+  font-size:1.15rem;
   line-height:1.8;
-  color:#ff5f9e;
+  color:#ff5c9d;
   min-height:120px;
-  transition:.4s;
+  transition:.5s;
 }
 
 button{
-  margin-top:18px;
-  padding:14px 28px;
+  margin-top:16px;
+  width:100%;
+  padding:14px;
   border:none;
-  border-radius:30px;
-  background:#ff6fae;
-  color:white;
-  font-size:1.05rem;
-  box-shadow:0 0 25px rgba(255,105,180,.6);
+  border-radius:999px;
+  background:linear-gradient(135deg,#ff6fae,#ff3f81);
+  color:#fff;
+  font-size:1.1rem;
+  box-shadow:0 8px 20px rgba(255,80,140,.5);
+  transition:.3s;
 }
-
-button:disabled{
-  opacity:.5;
-}
+button:active{transform:scale(.95)}
 
 input{
-  width:90%;
-  padding:10px;
-  margin-top:10px;
+  width:100%;
+  margin-top:12px;
+  padding:12px;
   border-radius:14px;
-  border:1px solid #ff9fc7;
+  border:1px solid #ffd1ea;
   font-size:1rem;
 }
 
 .heart{
   position:fixed;
-  bottom:-20px;
+  bottom:-30px;
   font-size:22px;
-  animation:floatUp 6s linear forwards;
+  animation:floatUp 4s linear forwards;
 }
 
 @keyframes floatUp{
-  to{
-    transform:translateY(-120vh);
-    opacity:0;
-  }
+  to{transform:translateY(-120vh);opacity:0}
 }
-
 @keyframes fadeIn{
-  from{opacity:0;transform:scale(.95)}
-  to{opacity:1}
+  from{opacity:0;transform:scale(.9)}
+  to{opacity:1;transform:scale(1)}
 }
 </style>
 </head>
@@ -91,86 +86,110 @@ input{
 
 <div class="card">
   <img src="รักมิ้น.png" alt="ที่รักของเขา">
+  <div class="text" id="text">เขาอยากให้ที่รักค่อย ๆ กดไปนะ 💗</div>
+  <button id="btn">กดเบา ๆ 💖</button>
 
-  <div class="text" id="text">
-    เขาไม่เคยคิดเลยว่าแค่รอยยิ้มของใครคนหนึ่ง จะเปลี่ยนโลกได้ขนาดนี้
-  </div>
-
-  <button id="btn">กดเบา ๆ 💗</button>
-
-  <div id="questions" style="display:none">
-    <input id="q1" placeholder="คำถามที่ 1 : มิ้นรู้สึกยังไงกับเขา 🥺">
-    <input id="q2" placeholder="คำถามที่ 2 : สิ่งที่มิ้นชอบในตัวเขา 💕">
-    <input id="q3" placeholder="คำถามที่ 3 : อยากบอกอะไรเขาไหม 🤍">
+  <div id="qa" style="display:none">
+    <input id="a1" placeholder="คำถามที่ 1 : มิ้นรู้สึกยังไงกับเขา 🥺">
+    <input id="a2" placeholder="คำถามที่ 2 : สิ่งที่มิ้นชอบในตัวเขา 💕">
+    <input id="a3" placeholder="คำถามที่ 3 : อยากบอกอะไรเขาไหม 🤍">
     <button onclick="sendLine()">ส่งให้เขาใน LINE 💌</button>
   </div>
 </div>
 
-<audio id="bgm" loop>
+<audio id="music" loop>
   <source src="รักมากนะ (1).mp3" type="audio/mpeg">
 </audio>
 
 <script>
 const texts = [
-"ตั้งแต่มีมิ้นอยู่ในชีวิต ทุกวันของเขามีความหมาย",
-"เขาเริ่มยิ้มบ่อยขึ้น โดยไม่รู้ตัว",
-"บางวันแค่เห็นชื่อมิ้นขึ้นแจ้งเตือน ใจก็ฟูแล้ว",
-"เขาไม่เก่งเรื่องคำหวาน แต่เก่งเรื่องรักมิ้น",
-"หมาเด็กตัวนี้อาจงอแง แต่รักจริงไม่แบ่ง",
-"สองเดือนที่ผ่านมา มันไม่ใช่แค่เวลา",
-"แต่มันคือความผูกพันที่ค่อย ๆ โตขึ้น",
-"เขาชอบเวลาที่มิ้นหัวเราะ",
-"ชอบแม้กระทั่งเวลาที่มิ้นงอน",
-"เพราะมันทำให้เขารู้สึกว่า… เขาสำคัญ",
-"เขาอยากเป็นที่พักใจในวันที่มิ้นเหนื่อย",
-"อยากเป็นเสียงแรกที่มิ้นคิดถึง",
-"อยากอยู่ข้าง ๆ แม้วันที่โลกไม่น่ารัก",
-"เขาไม่ได้สัญญาว่าจะสมบูรณ์แบบ",
-"แต่สัญญาว่าจะไม่หายไปไหน",
-"เขารักมิ้น ในแบบที่เป็น",
-"รักในวันที่มิ้นยิ้ม",
-"รักในวันที่มิ้นร้องไห้",
-"รักแม้ในวันที่มิ้นไม่มั่นใจ",
-"เพราะสำหรับเขา… มิ้นคือที่รัก",
+"เขาไม่เคยคิดเลยนะ…",
+"ว่าแค่รอยยิ้มของใครคนหนึ่ง",
+"จะทำให้โลกทั้งใบของเขา",
+"อบอุ่นขึ้นได้ขนาดนี้",
+"ตั้งแต่มีมิ้นเข้ามา",
+"วันธรรมดาของเขาไม่ธรรมดาอีกเลย",
+"เขาเริ่มยิ้มกับโทรศัพท์บ่อยขึ้น",
+"เริ่มรอข้อความเดิม ๆ จากคนเดิม",
+"เริ่มคิดถึงใครบางคนทุกเช้า",
+"แม้วันที่เขาเหนื่อยมาก",
+"แค่ได้คุยกับมิ้น",
+"เขาก็เหมือนได้พักใจ",
+"เขาอาจไม่เก่ง",
+"อาจไม่สมบูรณ์แบบ",
+"แต่เขาจริงใจกับมิ้นเสมอ",
+"สองเดือนอาจดูสั้น",
+"แต่สำหรับเขา",
+"มันเต็มไปด้วยความทรงจำ",
+"เสียงหัวเราะ",
+"ความงอนเล็ก ๆ",
+"และความคิดถึงที่ไม่เคยลด",
+"เขาชอบเวลามิ้นยิ้ม",
+"ชอบเวลามิ้นเรียกเขา",
+"ชอบทุกอย่างที่เป็นมิ้น",
+"เขาอยากให้รู้ว่า…",
+"เขาเลือกมิ้นทุกวัน",
+"ไม่ใช่เพราะบังเอิญ",
+"แต่เพราะตั้งใจ",
+"ตั้งใจรัก",
+"ตั้งใจดูแล",
+"ตั้งใจอยู่ข้าง ๆ",
+"ไม่ว่าจะวันธรรมดา",
+"หรือวันที่โลกใจร้าย",
+"เขาก็ยังอยากจับมือมิ้นไว้",
+"ถ้าวันไหนมิ้นเหนื่อย",
+"เขาอยากเป็นที่พัก",
+"ถ้าวันไหนมิ้นท้อ",
+"เขาอยากเป็นกำลังใจ",
+"เขาอาจไม่สัญญาว่าจะไม่ทะเลาะ",
+"แต่สัญญาว่าจะไม่ทิ้ง",
 "สุขสันต์ครบรอบ 2 เดือนนะ",
-"ขอบคุณที่เลือกจับมือเขา",
-"ก่อนจบเพลงนี้ เขาอยากฟังเสียงมิ้นบ้าง"
+"ที่รักของเขา 💖",
+"ก่อนเพลงจะจบ",
+"เขาอยากฟังเสียงมิ้นบ้าง…"
 ];
 
-let i = 0;
-const textEl = document.getElementById("text");
-const btn = document.getElementById("btn");
-const bgm = document.getElementById("bgm");
+let i=0, lock=false, started=false;
+const textEl=document.getElementById("text");
+const btn=document.getElementById("btn");
+const music=document.getElementById("music");
 
-btn.onclick = () => {
-  if(i === 0) bgm.play();
-  if(i < texts.length){
-    textEl.textContent = texts[i++];
-    spawnHeart();
-    btn.disabled = true;
-    setTimeout(()=>btn.disabled=false,3000);
-  } else {
-    btn.style.display="none";
-    document.getElementById("questions").style.display="block";
-  }
-};
+btn.onclick=()=>{
+ if(lock) return;
+ lock=true;
+
+ if(!started){
+   music.play();
+   started=true;
+ }
+
+ setTimeout(()=>{
+   if(i<texts.length){
+     textEl.textContent=texts[i++];
+     spawnHeart();
+   }else{
+     document.getElementById("qa").style.display="block";
+     btn.style.display="none";
+   }
+   lock=false;
+ },3000);
+}
 
 function spawnHeart(){
-  const h=document.createElement("div");
-  h.className="heart";
-  h.textContent="💗";
-  h.style.left=Math.random()*100+"vw";
-  document.body.appendChild(h);
-  setTimeout(()=>h.remove(),6000);
+ const h=document.createElement("div");
+ h.className="heart";
+ h.textContent="💖";
+ h.style.left=Math.random()*100+"vw";
+ document.body.appendChild(h);
+ setTimeout(()=>h.remove(),4000);
 }
 
 function sendLine(){
-  const msg =
-`คำตอบจากมิ้น 💖
-1) ${q1.value}
-2) ${q2.value}
-3) ${q3.value}`;
-  location.href="https://line.me/R/msg/text/?"+encodeURIComponent(msg);
+ const a1=document.getElementById("a1").value;
+ const a2=document.getElementById("a2").value;
+ const a3=document.getElementById("a3").value;
+ const msg=`คำตอบจากมิ้น 💕\n\n1) ${a1}\n2) ${a2}\n3) ${a3}`;
+ window.location.href="https://line.me/R/msg/text/?"+encodeURIComponent(msg);
 }
 </script>
 
