--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ body{
   padding:14px;
   text-align:center;
   box-shadow:0 14px 32px rgba(255,105,180,.35);
+
+  max-height:90vh;          /* ✅ สำคัญ */
+  overflow-y:auto;          /* ✅ ทำให้เลื่อนได้ */
 }
 
 img{
@@ -63,6 +66,13 @@ input{
   font-size:0.9rem;
 }
 
+/* 🔽 ปุ่มส่ง LINE ให้เล็กลง */
+.send-line{
+  font-size:0.85rem;
+  padding:9px;
+  margin-top:12px;
+}
+
 .heart{
   position:fixed;
   bottom:-20px;
@@ -90,7 +100,10 @@ input{
     <input id="a1" placeholder="คำถามที่ 1 : มิ้นรู้สึกยังไงกับเขา 🥺">
     <input id="a2" placeholder="คำถามที่ 2 : สิ่งที่มิ้นชอบในตัวเขา 💕">
     <input id="a3" placeholder="คำถามที่ 3 : อยากบอกอะไรเขาไหม 🤍">
-    <button onclick="sendLine()">ส่งให้เขาใน LINE 💌</button>
+
+    <button class="send-line" onclick="sendLine()">
+      ส่งให้เขาใน LINE 💌
+    </button>
   </div>
 </div>
 
